--- a/.github/workflows/docker-build-no-cache.yml
+++ b/.github/workflows/docker-build-no-cache.yml
@@ -17,7 +17,6 @@ env:
 
   # montstrap repo / path
   MONTSTRAP_REPO: idoyo7/montstrap-manifest
-  MONTSTRAP_DIR: wedding-invitation2/manifests
   MONTSTRAP_FILE: deployment.yaml
 
 jobs:
@@ -177,93 +176,50 @@ jobs:
           echo ""
           ls -la montstrap/
 
-      - name: Ensure manifest exists
-        id: ensure
+      - name: Update manifests for both apps
+        id: update_manifests
         run: |
           set -euo pipefail
           cd montstrap
 
-          MANIFEST_DIR="${{ env.MONTSTRAP_DIR }}"
-          MANIFEST_FILE="${MANIFEST_DIR}/${{ env.MONTSTRAP_FILE }}"
+          MANIFEST_DIRS=("wedding-app/manifests" "wedding-app-external/manifests")
+          CHANGES_MADE=false
+          
+          for MANIFEST_DIR in "${MANIFEST_DIRS[@]}"; do
+            MANIFEST_FILE="${MANIFEST_DIR}/${{ env.MONTSTRAP_FILE }}"
+            
+            echo "--- Processing ${MANIFEST_FILE} ---"
+            
+            if [ ! -f "${MANIFEST_FILE}" ]; then
+              echo "❌ Manifest not found: ${MANIFEST_FILE}"
+              continue
+            fi
 
-          mkdir -p "${MANIFEST_DIR}"
+            echo "--- Before ---"
+            grep -n "image:" "${MANIFEST_FILE}" || true
 
-          if [ ! -f "${MANIFEST_FILE}" ]; then
-            echo "Manifest not found. Creating: ${MANIFEST_FILE}"
-            echo "apiVersion: apps/v1" > "${MANIFEST_FILE}"
-            echo "kind: Deployment" >> "${MANIFEST_FILE}"
-            echo "metadata:" >> "${MANIFEST_FILE}"
-            echo "  name: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "  namespace: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "  labels:" >> "${MANIFEST_FILE}"
-            echo "    app: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "spec:" >> "${MANIFEST_FILE}"
-            echo "  replicas: 2" >> "${MANIFEST_FILE}"
-            echo "  revisionHistoryLimit: 2" >> "${MANIFEST_FILE}"
-            echo "  selector:" >> "${MANIFEST_FILE}"
-            echo "    matchLabels:" >> "${MANIFEST_FILE}"
-            echo "      app: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "  template:" >> "${MANIFEST_FILE}"
-            echo "    metadata:" >> "${MANIFEST_FILE}"
-            echo "      labels:" >> "${MANIFEST_FILE}"
-            echo "        app: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "    spec:" >> "${MANIFEST_FILE}"
-            echo "      containers:" >> "${MANIFEST_FILE}"
-            echo "        - name: wedding-invitation" >> "${MANIFEST_FILE}"
-            echo "          image: ${IMAGE_TAG}" >> "${MANIFEST_FILE}"
-            echo "          ports:" >> "${MANIFEST_FILE}"
-            echo "            - containerPort: 3000" >> "${MANIFEST_FILE}"
-          fi
+            if [ -z "${IMAGE_TAG}" ]; then
+              echo "❌ IMAGE_TAG is empty. Refusing to run sed replacement." >&2
+              exit 1
+            fi
 
-          echo "manifest_file=${MANIFEST_FILE}" >> "$GITHUB_OUTPUT"
-          echo "--- Current image lines ---"
-          grep -n "image:" "${MANIFEST_FILE}" || true
+            # Update image tag
+            if grep -Eq "^[[:space:]]*image:[[:space:]]*${{ env.IMAGE_NAME }}:" "${MANIFEST_FILE}"; then
+              sed -i -E "s|(^[[:space:]]*image:[[:space:]]*)${{ env.IMAGE_NAME }}:.*|\\1${IMAGE_TAG}|g" "${MANIFEST_FILE}"
+              CHANGES_MADE=true
+            else
+              echo "⚠️ No matching image line for ${{ env.IMAGE_NAME }} found in ${MANIFEST_FILE}"
+            fi
 
-      - name: Update image tag in manifest
-        id: update
-        run: |
-          set -euo pipefail
-          cd montstrap
+            echo "--- After ---"
+            grep -n "image:" "${MANIFEST_FILE}" || true
+          done
+          
+          echo "changes_made=${CHANGES_MADE}" >> "$GITHUB_OUTPUT"
 
-          MANIFEST_FILE="${{ steps.ensure.outputs.manifest_file }}"
-
-          echo "--- Before ---"
-          grep -n "image:" "${MANIFEST_FILE}" || true
-
-          if [ -z "${IMAGE_TAG}" ]; then
-            echo "❌ IMAGE_TAG is empty. Refusing to run sed replacement." >&2
-            exit 1
-          fi
-
-          # 공백/들여쓰기 포함해 image 라인을 안전하게 교체
-          # 1) image: <IMAGE_NAME>:<anything> 형태가 있으면 교체
-          if grep -Eq "^[[:space:]]*image:[[:space:]]*${{ env.IMAGE_NAME }}:" "${MANIFEST_FILE}"; then
-            sed -i -E "s|(^[[:space:]]*image:[[:space:]]*)${{ env.IMAGE_NAME }}:.*|\\1${IMAGE_TAG}|g" "${MANIFEST_FILE}"
-          else
-            # 2) image: 라인이 아예 없거나 다른 이미지면, 첫 번째 컨테이너 블록 아래에 넣고 싶다면 로직 추가 가능
-            #    여기서는 "image:" 라인이 있으면 그걸 교체(이미지명이 다르면 바꾸지 않음)하고,
-            #    없으면 실패로 처리해서 눈에 띄게 함.
-            echo "❌ No matching image line for ${{ env.IMAGE_NAME }} found in ${MANIFEST_FILE}"
-            echo "Please ensure the manifest contains an image line for ${{ env.IMAGE_NAME }}."
-            echo "--- Full manifest ---"
-            cat "${MANIFEST_FILE}"
-            exit 1
-          fi
-
-          echo "--- After ---"
-          grep -n "image:" "${MANIFEST_FILE}" || true
-
-          # 변경 여부 체크
-          if git diff --exit-code --quiet "${MANIFEST_FILE}"; then
-            echo "changes_made=false" >> "$GITHUB_OUTPUT"
-            echo "No changes detected."
-          else
-            echo "changes_made=true" >> "$GITHUB_OUTPUT"
-            echo "Changes detected."
-          fi
 
       - name: Commit and push changes to montstrap
-        if: steps.update.outputs.changes_made == 'true'
+        if: steps.update_manifests.outputs.changes_made == 'true'
         run: |
           set -euo pipefail
           cd montstrap
@@ -272,8 +228,8 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
           git status
-          git add "${{ steps.ensure.outputs.manifest_file }}"
-          git commit -m "🚀 Update wedding-invitation image tag to ${SHORT_SHA}"
+          git add wedding-app/manifests/${{ env.MONTSTRAP_FILE }} wedding-app-external/manifests/${{ env.MONTSTRAP_FILE }}
+          git commit -m "🚀 Update invi2 image tag to ${SHORT_SHA} for both apps"
 
           # main/master 어느 브랜치인지 자동으로 맞춰 푸시
           BRANCH="${GITHUB_REF_NAME}"
@@ -286,10 +242,10 @@ jobs:
           echo "### 🚀 Deployment Manifest Update Status" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Repo:** \`${{ env.MONTSTRAP_REPO }}\`" >> $GITHUB_STEP_SUMMARY
-          echo "**File:** \`${{ env.MONTSTRAP_DIR }}/${{ env.MONTSTRAP_FILE }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Files:** \`wedding-app/manifests/${{ env.MONTSTRAP_FILE }}\`, \`wedding-app-external/manifests/${{ env.MONTSTRAP_FILE }}\`" >> $GITHUB_STEP_SUMMARY
           echo "**Image Tag:** \`${IMAGE_TAG}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          if [ "${{ steps.update.outputs.changes_made || 'false' }}" = "true" ]; then
+          if [ "${{ steps.update_manifests.outputs.changes_made || 'false' }}" = "true" ]; then
             echo "✅ Updated and pushed successfully." >> $GITHUB_STEP_SUMMARY
           else
             echo "ℹ️ No changes were needed (or update step did not run)." >> $GITHUB_STEP_SUMMARY
@@ -310,7 +266,7 @@ jobs:
           echo "Docker image built/pushed and manifest updated." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Image Tag:** \`${IMAGE_TAG}\` (and \`${{ env.IMAGE_NAME }}:latest\`)" >> $GITHUB_STEP_SUMMARY
-          echo "**Manifest:** \`${{ env.MONTSTRAP_REPO }}/${{ env.MONTSTRAP_DIR }}/${{ env.MONTSTRAP_FILE }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Manifests:** \`${{ env.MONTSTRAP_REPO }}/wedding-app/manifests/${{ env.MONTSTRAP_FILE }}\`, \`${{ env.MONTSTRAP_REPO }}/wedding-app-external/manifests/${{ env.MONTSTRAP_FILE }}\`" >> $GITHUB_STEP_SUMMARY
           echo "**SHA:** \`${SHORT_SHA}\`" >> $GITHUB_STEP_SUMMARY
 
   failure-notification:
